--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
 </head>
 
 <body>
+  <script>
+    document.addEventListener('touchmove', function (e) {
+      if (e.target.tagName === 'CANVAS') {
+        e.preventDefault();
+      }
+    }, { passive: false });
+  </script>
   <script src="sketch.js"></script>
 </body>
 
